@@ -1287,7 +1287,7 @@ namespace client
                             regularshape(PART_SMOKE, int(t->radius), 0x222222, 21, 20, 250, t->feetpos(), 1, 1, -10, 0, 10.f);
                             break;
                         }
-                        case SPHY_BOOST: case SPHY_KICK: case SPHY_SKATE: case SPHY_DASH: case SPHY_MELEE:
+                        case SPHY_BOOST: case SPHY_KICK: case SPHY_SKATE: case SPHY_POUND: case SPHY_DASH: case SPHY_MELEE:
                         {
                             t->resetphys();
                             t->doimpulse(0, IM_T_BOOST+(st-SPHY_BOOST), lastmillis);
