@@ -227,21 +227,25 @@ GFVAR(0, impulsespeed, FVAR_NONZERO, 90, FVAR_MAX); // extra velocity to add whe
 
 GFVAR(0, impulselimit, 0, 0, FVAR_MAX); // maximum impulse speed
 GFVAR(0, impulseboost, 0, 1, FVAR_MAX); // thrust modifier
-GFVAR(0, impulsepower, 0, 1.3f, FVAR_MAX); // power jump modifier
+GFVAR(0, impulsepower, 0, 1.5f, FVAR_MAX); // power jump modifier
 GFVAR(0, impulsedash, 0, 1.2f, FVAR_MAX); // dashing/powerslide modifier
 GFVAR(0, impulsejump, 0, 1.1f, FVAR_MAX); // jump modifier
-GFVAR(0, impulsemelee, 0, 0.5f, FVAR_MAX); // melee modifier
+GFVAR(0, impulsemelee, 0, 0.75f, FVAR_MAX); // melee modifier
 GFVAR(0, impulseparkour, 0, 1, FVAR_MAX); // parkour modifier
 GFVAR(0, impulseparkourkick, 0, 1.3f, FVAR_MAX); // parkour kick modifier
 GFVAR(0, impulseparkournorm, 0, 0.5f, FVAR_MAX); // minimum parkour surface z normal
+GFVAR(0, impulsepound, 0, 1.6f, FVAR_MAX); // pound modifier
+GFVAR(0, impulsepoundheight, 0, 24, FVAR_MAX); // pound minimum height off ground
+GFVAR(0, impulsepoundweight, 0, 12, FVAR_MAX); // pound pitch for hit detection
+GFVAR(0, impulsepoundpitch, 0, 70, 90); // pound extra weight modifier
 GVAR(0, impulseallowed, 0, 3, 3); // impulse allowed; 0 = off, 1 = dash/boost only, 2 = dash/boost and sprint, 3 = all mechanics including parkour
 GVAR(0, impulsestyle, 0, 1, 3); // impulse style; 0 = off, 1 = touch and count, 2 = count only, 3 = freestyle
 GVAR(0, impulsecount, 0, 6, VAR_MAX); // number of impulse actions per air transit
 GVAR(0, impulseslip, 0, 300, VAR_MAX); // time before floor friction kicks back in
 GVAR(0, impulseslide, 0, 750, VAR_MAX); // time before powerslides end
-GVAR(0, impulsedelay, 0, 250, VAR_MAX); // minimum time between boosts
+GVAR(0, impulsedelay, 0, 200, VAR_MAX); // minimum time between boosts
 GVAR(0, impulsedashdelay, 0, 750, VAR_MAX); // minimum time between dashes/powerslides
-GVAR(0, impulsekickdelay, 0, 450, VAR_MAX); // minimum time between wall kicks/climbs
+GVAR(0, impulsekickdelay, 0, 300, VAR_MAX); // minimum time between wall kicks/climbs
 GVAR(0, impulsemeter, 0, 20000, VAR_MAX); // impulse dash length; 0 = unlimited, anything else = timer
 GVAR(0, impulsecost, 0, 4000, VAR_MAX); // cost of impulse jump
 GVAR(0, impulseskate, 0, 1000, VAR_MAX); // length of time a run along a wall can last
